ieatacid (5/20/09)
-----------------
- Updated version to 5.13.4
- Updated opcodes
- Updated code to handle the now serialized guild list

ieatacid (3/20/09)
-----------------
- Updated version to 5.13.3
- Updated opcodes for 3/19 patch

ieatacid (3/15/09)
-----------------
- Updated version to 5.13.2
- Updated charProfile and playerFrofile structs for compatibility with live 3/12

ieatacid (2/15/09)
-----------------
- Updated version to 5.13.1
- Updated opcodes

purple (1/25/09)
---------------
- Fixed some parameter naming things that cause problems with gcc 4.3 (thanks,
Tanner)

ieatacid (1/20/09)
-----------------
- Updated version to 5.13.0
- Opcode updates from December
- Added instance location marker.  Right-click map -> Show -> Instance Location Marker
- Added option to filter client/server packets in the zone log file

purple (11/21/08)
-----------------
- Fixed acincludes test for QT to use modern headers so we don't require
  compat libs

ieatacid (10/23/08)
----------------
- Updated version to 5.12.7.0
- Compatibility with live 10/21
- Updated opcodes
- Went through all the critical opcodes and updated some older ones that weren't correct

ieatacid (10/12/08)
----------------
- Updated version to 5.12.6.0
- Compatibility with live 10/07
- Updated structs/opcodes

ieatacid (9/22/08)
----------------
- Updated version to 5.12.5.2
- Fixed crash issue that happened if you left a group then zoned

ieatacid (9/16/08)
----------------
- Updated version to 5.12.5.1
- Fixed problem with your player remaining a corpse after respawning in the same zone you died in
- Added zones from the upcoming Seeds of Destruction expansion to zones.h
- Fixed pcap_perror warnings in packetcapture.cpp

ieatacid (9/8/08)
----------------
- Updated version to 5.12.5.0
- Updated/added opcodes where necessary
- Updated/added/removed code to handle how group member data is sent now
- Added more item codes from uRit1u2CBBA

ieatacid (6/21/08)
----------------